syntax = "proto3";

import "google/protobuf/timestamp.proto";
package com.srv.grpc.sample.chat;

option java_multiple_files = true;

message ChatMessage {
  string from = 1;
  string message = 2;
}

message ChatMessageFromServer {
  google.protobuf.Timestamp timestamp = 1;
  ChatMessage message = 2;
}

service ChatService {
  rpc chat(stream ChatMessage) returns (stream ChatMessageFromServer);
}