syntax = "proto3";

package com.srv.grpc.sample;
option java_multiple_files = true;

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}

service GreetingService {
  rpc greet(GreetRequest) returns (GreetResponse);
}